:lipstick: fix overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,7 @@
 body {
 	background-color: #05080c;
 	color: #EAF2FB;
+  overflow-x: hidden;
 }
 
 #root {
